--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devdaily-ai",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Your AI memory for developer work - auto-generate PR descriptions, standup notes, and work summaries",
   "type": "module",
   "bin": {
@@ -32,6 +32,19 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/devdaily-ai.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yourusername/devdaily-ai/issues"
+  },
+  "homepage": "https://github.com/yourusername/devdaily-ai#readme",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "dependencies": {
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
