docs: PM integration test report and E2E test scripts
- Add comprehensive test report for GitHub Issues, Linear, and Jira
  integrations (docs/reports/PM_INTEGRATION_TEST_REPORT.md)
- Add test setup scripts for reproducible E2E testing:
  - scripts/setup-test-repo.sh — scaffold GitHub repo with issues
  - scripts/setup-test-commits.sh — create branches, commits, and PRs
  - scripts/create-linear-issues.py — create Linear issues via GraphQL
- Update docs/TESTING.md with PM integration testing section
- Update CHANGELOG.md with v0.4.1 fixes and additions
- Add devdaily secrets patterns to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ coverage/
 *.seed
 *.pid.lock
 .cache/
+
+# DevDaily secrets (API tokens, credentials)
+.devdaily.secrets.json
+secrets.json
+*.secrets.json
